# SGDB_Agent

./: .env.example  .gitignore  CITATION.cff  CLAUDE.md  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  README.md  pyproject.toml  start_server.sh
.github/workflows/: quality.yml
agent_development/: run.py
agent_development/config/: config.yaml
agent_development/docs/: data_download_guide.md  enhanced_architecture.md
agent_v2/: PHASE1_SUMMARY.md  PHASE5_SUMMARY.md  README.md
agent_v3/: IMPLEMENTATION_STATUS.md  PHASE2_PLAN.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  QUICKSTART.md  run_server.py  test_v3_basic.py
api/: _text.py  main.py  mcp_server.py  schemas.py  websocket.py
biscp/: README.md
cellxgene/: README.md
config/: config.yaml
data/: schema_knowledge.yaml
database_development/: 00_README_FOR_DEVELOPERS.md  01_ARCHITECTURE_DESIGN.md  02_DATABASE_SCHEMA.md  03_IMPLEMENTATION_ROADMAP.md  README.md  example_data_walkthrough.md
ebi/: README.md  check_status.sh  ebi_collector.py  ebi_collector.py.backup  monitor.sh  start_collector.sh  stop_collector.sh  tqdm.py  view_logs.sh
extensions/: README.md
geo/: README.md
ncbi_bioproject_sra_data/: README.md
scripts/: audit_scaled.py  build_gold_v3_candidates.py  build_rs_v3_hard.py  export_catalog_release.py  gen_stats_atlas.py  inspect_query.py  install_human_db.py  rebuild_stats.py  upload_release_hf.py  upload_release_zenodo.py
src/: config.py
web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
(+278 files in other folders)
