[project]
name = "sceqtl-agent"
version = "3.0.0"
description = "Ontology-aware, cross-database metadata retrieval agent for human single-cell RNA-seq data"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1",
    "ruff>=0.3.0",
]
ontology = [
    "pronto>=2.5.0",
]
# Optional: real MCP (Model Context Protocol) stdio server for AI agents.
# `python -m api.mcp_server` degrades gracefully without these installed.
# httpx is already a core dependency, so this group only adds the mcp SDK
# (which pulls in anyio). Install with: pip install -e '.[agent]'
agent = [
    "mcp>=1.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
